--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel": "~5.2.15",
     "mongodb": "~2.0.28",
     "bell": "~2.7.0",
-    "q": "~1.3.0"
+    "q": "~1.3.0",
+    "moment": "~2.10.2"
   }
 }
