--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
   "author": "Arild Wanvik Tvergrov <arild.wanvik@gmail.com>",
   "license": "BSD-2-Clause",
   "dependencies": {
+    "babel": "~5.2.15",
+    "bell": "~2.7.0",
+    "console-stamp": "^0.2.0",
+    "good": "^6.3.0",
+    "good-console": "^5.0.3",
     "hapi": "~8.4.0",
     "immutable": "~3.7.2",
-    "babel": "~5.2.15",
+    "moment": "~2.10.2",
     "mongodb": "~2.0.28",
-    "bell": "~2.7.0",
-    "q": "~1.3.0",
-    "moment": "~2.10.2"
+    "q": "~1.3.0"
   }
 }
